# cravetown-love

./: .gitignore  AGENTS.md  README.md  SETUP.md  STRUCTURE.md  TODO.md  TODO_UI_FEATURES.md  WARP.md  claude.md  conf.lua  main.lua  original_prompt.txt  package.json  sample-launch.json
chain-of-thought/: README.md  alpha_design_summary.md  commodity_fulfillment_vectors_analysis.md  consumption_prototype_design.md  consumption_prototype_implementation_progress.md  consumption_prototype_ui_specification.md  cravetown-meeting-001-nov22-2025.md  craving-vectors.md  durable_goods_implementation.md  fulfillment_vectors_recommendations.md  hardcoded_values_refactor.md  marketplace_economy_design.md  meeting_notes_2025-12-02_adwait.md  missing_production_chains_plan.md  multi-level-vectors.md  natural_resources_architecture.md  task_creation_rubric.md
code/: AlphaNaturalResources.lua  AlphaPrototypeState.lua  AlphaUI.lua  AlphaWorld.lua  BakerySetupModal.lua  BirthdaySplash.lua  Building.lua  BuildingDefinitions.lua  BuildingDetailModal.lua  BuildingMenu.lua  BuildingPlacementState.lua  BuildingTypes.lua  Camera.lua  Character.lua  CharacterDefinitions.lua  CharacterDetailPanel.lua  CharacterFactory.lua  CharacterMenu.lua  CharacterMovement.lua  CheatConsole.lua  CitizenSeparation.lua  CommodityDefinitions.lua  CommodityTypes.lua  CommodityTypes.lua.backup  ConsumptionPrototype.lua  DataLoader.lua  DayEndSummaryModal.lua  DebugPanel.lua  EconomicsSystem.lua  Forest.lua  GameSettings.lua  (+53 more)
mcp_server/: README.md  __init__.py  game_client.py  pyproject.toml  server.py
(+171 files in other folders)
